<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWindow</class>
 <widget class="QMainWindow" name="MainWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>536</width>
    <height>559</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Line Scan Camera</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayoutControls">
        <item>
         <widget class="QPushButton" name="pushButtonStartStop">
          <property name="text">
           <string>Start</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="checkBoxLoopMeasurement">
          <property name="text">
           <string>loop measurement</string>
          </property>
          <property name="checkable">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QPushButton" name="pushButtonFreqHigh">
          <property name="text">
           <string>FreqHigh</string>
          </property>
         </widget>
        </item>
        <item>
         <spacer name="horizontalSpacerConrols">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>40</width>
            <height>20</height>
           </size>
          </property>
         </spacer>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayoutMeasureOn">
          <item>
           <widget class="QLabel" name="labelMeasureOn">
            <property name="text">
             <string>Measure On</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QWidget" name="widgetMeasureOn" native="true">
            <property name="minimumSize">
             <size>
              <width>20</width>
              <height>0</height>
             </size>
            </property>
            <property name="palette">
             <palette>
              <active>
               <colorrole role="Base">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>255</red>
                  <green>255</green>
                  <blue>255</blue>
                 </color>
                </brush>
               </colorrole>
               <colorrole role="Window">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>39</red>
                  <green>116</green>
                  <blue>55</blue>
                 </color>
                </brush>
               </colorrole>
              </active>
              <inactive>
               <colorrole role="Base">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>255</red>
                  <green>255</green>
                  <blue>255</blue>
                 </color>
                </brush>
               </colorrole>
               <colorrole role="Window">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>39</red>
                  <green>116</green>
                  <blue>55</blue>
                 </color>
                </brush>
               </colorrole>
              </inactive>
              <disabled>
               <colorrole role="Base">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>39</red>
                  <green>116</green>
                  <blue>55</blue>
                 </color>
                </brush>
               </colorrole>
               <colorrole role="Window">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>39</red>
                  <green>116</green>
                  <blue>55</blue>
                 </color>
                </brush>
               </colorrole>
              </disabled>
             </palette>
            </property>
            <property name="autoFillBackground">
             <bool>true</bool>
            </property>
           </widget>
          </item>
         </layout>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayoutBlockOn">
          <item>
           <widget class="QLabel" name="labelBlockOn">
            <property name="text">
             <string>Block On</string>
            </property>
           </widget>
          </item>
          <item>
           <widget class="QWidget" name="widgetBlockOn" native="true">
            <property name="minimumSize">
             <size>
              <width>20</width>
              <height>0</height>
             </size>
            </property>
            <property name="palette">
             <palette>
              <active>
               <colorrole role="Base">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>255</red>
                  <green>255</green>
                  <blue>255</blue>
                 </color>
                </brush>
               </colorrole>
               <colorrole role="Window">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>39</red>
                  <green>116</green>
                  <blue>55</blue>
                 </color>
                </brush>
               </colorrole>
              </active>
              <inactive>
               <colorrole role="Base">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>255</red>
                  <green>255</green>
                  <blue>255</blue>
                 </color>
                </brush>
               </colorrole>
               <colorrole role="Window">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>39</red>
                  <green>116</green>
                  <blue>55</blue>
                 </color>
                </brush>
               </colorrole>
              </inactive>
              <disabled>
               <colorrole role="Base">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>39</red>
                  <green>116</green>
                  <blue>55</blue>
                 </color>
                </brush>
               </colorrole>
               <colorrole role="Window">
                <brush brushstyle="SolidPattern">
                 <color alpha="255">
                  <red>39</red>
                  <green>116</green>
                  <blue>55</blue>
                 </color>
                </brush>
               </colorrole>
              </disabled>
             </palette>
            </property>
            <property name="autoFillBackground">
             <bool>true</bool>
            </property>
           </widget>
          </item>
         </layout>
        </item>
       </layout>
      </item>
      <item>
       <widget class="MyQChartView" name="chartView">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="verticalScrollBarPolicy">
         <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
        <property name="horizontalScrollBarPolicy">
         <enum>Qt::ScrollBarAlwaysOff</enum>
        </property>
        <property name="renderHints">
         <set>QPainter::Antialiasing|QPainter::TextAntialiasing</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QGroupBox" name="groupBoxLiveView">
        <property name="title">
         <string>Live view</string>
        </property>
        <layout class="QHBoxLayout" name="horizontalLayout">
         <item>
          <widget class="QRadioButton" name="radioButtonLiveViewOff">
           <property name="text">
            <string>off</string>
           </property>
           <property name="checked">
            <bool>true</bool>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QRadioButton" name="radioButtonLiveViewFixedSample">
           <property name="text">
            <string>fixed sample</string>
           </property>
          </widget>
         </item>
         <item>
          <widget class="QRadioButton" name="radioButtonLiveViewOffNewestSample">
           <property name="text">
            <string>newest sample</string>
           </property>
          </widget>
         </item>
         <item>
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
             <width>40</width>
             <height>20</height>
            </size>
           </property>
          </spacer>
         </item>
        </layout>
       </widget>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayoutSample">
        <item>
         <widget class="QLabel" name="labelSample">
          <property name="text">
           <string>Sample</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QSlider" name="horizontalSliderSample">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="minimum">
           <number>1</number>
          </property>
          <property name="maximum">
           <number>1000</number>
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
          <property name="tickPosition">
           <enum>QSlider::NoTicks</enum>
          </property>
         </widget>
        </item>
        <item>
         <widget class="MyQSpinBox" name="spinBoxSample">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="minimum">
           <number>1</number>
          </property>
          <property name="maximum">
           <number>1000</number>
          </property>
          <property name="value">
           <number>1</number>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayoutBlock">
        <item>
         <widget class="QLabel" name="labelBlock">
          <property name="minimumSize">
           <size>
            <width>50</width>
            <height>0</height>
           </size>
          </property>
          <property name="text">
           <string>Block</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QSlider" name="horizontalSliderBlock">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="minimum">
           <number>1</number>
          </property>
          <property name="maximum">
           <number>1000</number>
          </property>
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
         </widget>
        </item>
        <item>
         <widget class="MyQSpinBox" name="spinBoxBlock">
          <property name="enabled">
           <bool>false</bool>
          </property>
          <property name="minimum">
           <number>1</number>
          </property>
          <property name="maximum">
           <number>1000</number>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>536</width>
     <height>22</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuFile">
    <property name="title">
     <string>File</string>
    </property>
    <addaction name="actionVerify_data_file"/>
    <addaction name="actionExit"/>
   </widget>
   <widget class="QMenu" name="menuSettings">
    <property name="title">
     <string>Settings</string>
    </property>
    <addaction name="actionEdit"/>
    <addaction name="actionExport"/>
    <addaction name="actionImport"/>
   </widget>
   <widget class="QMenu" name="menuHelp">
    <property name="title">
     <string>Help</string>
    </property>
    <addaction name="actionDump_board_registers"/>
    <addaction name="actionAbout"/>
    <addaction name="actionAbout_Qt"/>
   </widget>
   <widget class="QMenu" name="menuChart">
    <property name="enabled">
     <bool>true</bool>
    </property>
    <property name="title">
     <string>Chart</string>
    </property>
    <addaction name="actionCameras"/>
    <addaction name="actionAxes"/>
    <addaction name="actionReset_axes"/>
   </widget>
   <widget class="QMenu" name="menuWindow">
    <property name="title">
     <string>Window</string>
    </property>
    <addaction name="actionRMS"/>
    <addaction name="actionDSC"/>
    <addaction name="actionDAC"/>
    <addaction name="actionIO_Control"/>
    <addaction name="actionspecial_pixels"/>
   </widget>
   <widget class="QMenu" name="menuGreyscale_Viewer">
    <property name="title">
     <string>Greyscale Viewer</string>
    </property>
    <addaction name="actionShow"/>
    <addaction name="actionGreyscaleSettings"/>
   </widget>
   <addaction name="menuFile"/>
   <addaction name="menuSettings"/>
   <addaction name="menuWindow"/>
   <addaction name="menuChart"/>
   <addaction name="menuGreyscale_Viewer"/>
   <addaction name="menuHelp"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="actionEdit">
   <property name="text">
    <string>Edit</string>
   </property>
   <property name="menuRole">
    <enum>QAction::PreferencesRole</enum>
   </property>
  </action>
  <action name="actionExit">
   <property name="text">
    <string>Exit</string>
   </property>
   <property name="menuRole">
    <enum>QAction::QuitRole</enum>
   </property>
  </action>
  <action name="actionDump_board_registers">
   <property name="text">
    <string>Dump board registers</string>
   </property>
   <property name="menuRole">
    <enum>QAction::ApplicationSpecificRole</enum>
   </property>
  </action>
  <action name="actionCameras">
   <property name="enabled">
    <bool>true</bool>
   </property>
   <property name="text">
    <string>Cameras...</string>
   </property>
   <property name="menuRole">
    <enum>QAction::PreferencesRole</enum>
   </property>
  </action>
  <action name="actionAxes">
   <property name="text">
    <string>Axes...</string>
   </property>
   <property name="menuRole">
    <enum>QAction::PreferencesRole</enum>
   </property>
  </action>
  <action name="actionReset_axes">
   <property name="text">
    <string>Reset axes</string>
   </property>
  </action>
  <action name="actionAbout">
   <property name="text">
    <string>About</string>
   </property>
   <property name="menuRole">
    <enum>QAction::AboutRole</enum>
   </property>
  </action>
  <action name="actionAbout_Qt">
   <property name="text">
    <string>About Qt</string>
   </property>
   <property name="menuRole">
    <enum>QAction::AboutQtRole</enum>
   </property>
  </action>
  <action name="actionTDC">
   <property name="text">
    <string>TDC</string>
   </property>
  </action>
  <action name="actionRMS">
   <property name="text">
    <string>RMS</string>
   </property>
  </action>
  <action name="actionGPX">
   <property name="text">
    <string>DSC</string>
   </property>
  </action>
  <action name="actionDSC">
   <property name="text">
    <string>DSC</string>
   </property>
  </action>
  <action name="actionDAC">
   <property name="text">
    <string>DAC</string>
   </property>
  </action>
  <action name="actionIO_Control">
   <property name="text">
    <string>IO Control</string>
   </property>
  </action>
  <action name="actionGreyscale_viewer">
   <property name="text">
    <string>Greyscale viewer</string>
   </property>
  </action>
  <action name="actionShow">
   <property name="text">
    <string>Show</string>
   </property>
  </action>
  <action name="actionGamma">
   <property name="text">
    <string>Gamma...</string>
   </property>
  </action>
  <action name="actionExport">
   <property name="text">
    <string>Export</string>
   </property>
  </action>
  <action name="actionImport">
   <property name="text">
    <string>Import</string>
   </property>
  </action>
  <action name="actionVerify_data_file">
   <property name="text">
    <string>Verify data file</string>
   </property>
  </action>
  <action name="actionspecial_pixels">
   <property name="text">
    <string>special pixels</string>
   </property>
  </action>
  <action name="actionGreyscaleSettings">
   <property name="text">
    <string>Settings</string>
   </property>
  </action>
 </widget>
 <customwidgets>
  <customwidget>
   <class>MyQChartView</class>
   <extends>QGraphicsView</extends>
   <header>myqchartview.h</header>
  </customwidget>
  <customwidget>
   <class>MyQSpinBox</class>
   <extends>QSpinBox</extends>
   <header>myqspinbox.h</header>
   <slots>
    <signal>valueManuallyChanged(int)</signal>
   </slots>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections>
  <connection>
   <sender>horizontalSliderBlock</sender>
   <signal>valueChanged(int)</signal>
   <receiver>spinBoxBlock</receiver>
   <slot>setValue(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>468</x>
     <y>522</y>
    </hint>
    <hint type="destinationlabel">
     <x>519</x>
     <y>526</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>spinBoxBlock</sender>
   <signal>valueManuallyChanged(int)</signal>
   <receiver>horizontalSliderBlock</receiver>
   <slot>setValue(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>519</x>
     <y>526</y>
    </hint>
    <hint type="destinationlabel">
     <x>468</x>
     <y>522</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>horizontalSliderSample</sender>
   <signal>valueChanged(int)</signal>
   <receiver>spinBoxSample</receiver>
   <slot>setValue(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>468</x>
     <y>495</y>
    </hint>
    <hint type="destinationlabel">
     <x>519</x>
     <y>499</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>spinBoxSample</sender>
   <signal>valueManuallyChanged(int)</signal>
   <receiver>horizontalSliderSample</receiver>
   <slot>setValue(int)</slot>
   <hints>
    <hint type="sourcelabel">
     <x>519</x>
     <y>499</y>
    </hint>
    <hint type="destinationlabel">
     <x>468</x>
     <y>495</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
